# Stock-Market-backend-

./: pyproject.toml
backend/: app.py  pyproject.toml  render.yaml  render.yamlzz  requirements.txt  scaler_X.pkl  scaler_y.pkl
