[project]
name = "stock-backend"
version = "0.1.0"
description = "Flask backend for stock prediction"
requires-python = ">=3.10,<3.12"
dependencies = [
    "flask==2.3.2",
    "flask-cors==3.0.10",
    "gunicorn==21.2.0",
    "joblib==1.3.2",
    "numpy==1.24.4",
    "pandas==2.0.3",
    "scikit-learn==1.3.2"
]
