[tool.poetry]
name = "stock-backend"
version = "0.1.0"
description = "Flask backend for stock prediction"
package-mode = false  
[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.2"
flask-cors = "3.0.10"
gunicorn = "21.2.0"
numpy = "1.24.4"
pandas = "2.0.3"
scikit-learn = "1.3.2"
scipy = "1.15.3"
joblib = "1.3.2"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
tzdata = "2025.2"

